--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
+      
       <div class="logo">Portfolio</div>
       <ul>
         <li>
@@ -67,6 +68,7 @@
       <div class="menu">
         <label for="hamburger">
           <i class="bi bi-list"></i>
+          <i class="bi bi-x-square"></i>
         </label>
       </div>
     </header>
