--- a/index.html
+++ b/index.html
@@ -1,76 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Portfolio de Marie" />
-    <title>Marie Durrmeyer: Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="./styles/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-  </head>
 
-  <body>
-    <header>
-      
-      <div class="logo">Portfolio</div>
-      <ul>
-        <li>
-          <a
-            class="aria-current"
-            ="true"
-            class="link"
-            href="/">
-            Accueil
-          </a>
-        </li>
-        <li>
-          <a
-            class="link"
-            href="./work/">
-            Mes projects
-          </a>
-        </li>
-        <li>
-          <a
-            class="link"
-            href="./about/">
-            A propos
-          </a>
-        </li>
-        <li>
-          <a href="#"><i class="bi bi-linkedin"></i> </a>
-        </li>
-        <li>
-          <a href="#"><i class="bi bi-github"></i> </a>
-        </li>
-      </ul>
-      <div class="menu">
-        <label for="hamburger">
-          <i class="bi bi-list"></i>
-          <i class="bi bi-x-square"></i>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio de Marie" />
+    <title>Marie Durrmeyer: Portfolio</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+</head>
+
+<body>
+    <header class="header">
+        <div class="logo">Portfolio</div>
+        <input type="checkbox" id="check">
+        <label for="check" class="menu">
+            <i class="bi bi-list" id="open"></i>
+            <i class="bi bi-x" id="close"></i>
         </label>
-      </div>
+        <nav class="navbar">
+            <a class="aria-current"="true" class="link" href="#">
+                Accueil
+            </a>
+
+            <a class="link" href="./work/">
+                Mes projects
+            </a>
+
+            <a class="link" href="./about/">
+                A propos
+            </a>
+            <a href="#"><i class="bi bi-linkedin"></i> </a>
+            <a href="#"><i class="bi bi-github"></i> </a>
+        </nav>
+
+
     </header>
 
     <!--    <div class="menu-footer astro-DMQPWCEC">
@@ -332,5 +304,6 @@
             </p>
         </footer>
         </div>-->
-  </body>
+</body>
+
 </html>
